Should no longer need these JDK options for running the FrankDoc Doclet.
Also, reorder an import?